# llm_council

./: .gitignore  README.md  claude_desktop_config.json  pyproject.toml
src/lm_council_mcp/: __init__.py  council_manager.py  models.py  rubrics.py  server.py  utils.py
tests/: __init__.py  conftest.py  test_council_manager.py
