[project]
name = "lm-council-mcp"
version = "0.1.0"
description = "MCP server for democratic LLM evaluation using the lm-council library"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "lm-council>=0.1.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
lm-council-mcp = "lm_council_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lm_council_mcp"]

[tool.hatch.build.targets.sdist]
include = ["src/lm_council_mcp"]

[tool.hatch.build]
sources = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
